<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calc12.MainActivity" 
    android:background="@drawable/blue">

   <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:textColor="#01060D"
        android:background="#cc99ff"
        android:padding="25dp"
        android:text="@string/_8"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7"
        android:layout_toEndOf="@+id/button8"
        android:textColor="#01060D"
        android:background="#cc99ff"
        android:padding="25dp"
        android:text="@string/_9"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:textColor="#01060D"
        android:background="#cc99ff"
        android:padding="25dp"
        android:text="@string/_5"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button9"
        android:layout_below="@+id/button9"
        android:textColor="#01060D"
        android:background="#cc99ff"
        android:padding="25dp"
        android:text="@string/_4"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button21"
        android:layout_alignStart="@+id/button4"
        android:layout_toStartOf="@+id/button11"
       android:textColor="#01060D"
        android:background="#cc99ff"
        android:padding="25dp"
        android:text="@string/_3"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button0"
        android:layout_alignStart="@+id/button5"
        android:textColor="#01060D"
        android:background="#cc99ff"
        android:padding="25dp"
        android:text="@string/_2"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_toStartOf="@+id/button5"
        android:textColor="#01060D"
        android:background="#cc99ff"
        android:padding="25dp"
        android:text="@string/_1"
        android:onClick="onClick1" />


    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button12"
        android:layout_alignStart="@+id/button14"
         android:textColor="#01060D"
        android:background="#99CCFF"
        android:padding="25dp"
        android:text="@string/plus"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button0"
        android:layout_alignStart="@+id/button11"
         android:textColor="#01060D"
        android:background="#99CCFF"
        android:padding="25dp"
        android:text="@string/minus"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignStart="@+id/button11"
         android:textColor="#01060D"
        android:background="#99CCFF"
        android:padding="25dp"
        android:text="@string/multi"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignTop="@+id/button9"
        android:layout_toEndOf="@+id/button9"
         android:textColor="#01060D"
        android:background="#99CCFF"
        android:padding="20dp"
        android:text="@string/div"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button0"
        android:layout_alignEnd="@+id/button5"
        android:layout_below="@+id/button2"
        android:layout_toEndOf="@+id/button0"
       android:textColor="#01060D"
        android:background="#cc99ff"
        android:onClick="clear"
        android:padding="10dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button12"
        android:layout_alignStart="@+id/button3"
        android:layout_alignTop="@+id/button16"
        android:layout_toStartOf="@+id/button12"
     android:textColor="#01060D"
        android:background="#cc99ff"
        android:padding="20dp"
        android:text="@string/punct"
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button0"
        android:layout_alignEnd="@+id/button12"
        android:layout_below="@+id/button16"
        android:background="#99CCFF"
        android:onClick="onClick"
        android:padding="25dp"
        android:text="@string/egal"
        android:textColor="#01060D" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:padding="25dp"
       android:textColor="#01060D"
        android:background="#cc99ff"
        android:text="@string/_7"
        android:layout_alignParentTop="true"
      
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#01060D"
        android:background="#cc99ff"
        android:padding="25dp"
        android:text="@string/_6"
        android:layout_below="@+id/button7"
        android:layout_alignParentStart="true"
     
        android:onClick="onClick1" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:text="@string/_0"
      android:textColor="#01060D"
        android:background="#cc99ff"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true"
 
        android:onClick="onClick1" />

  

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
     
        android:id="@+id/textView"
        android:layout_alignParentEnd="true"
       
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
       
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    
</RelativeLayout>
